# flash-attention

2d/: pyproject.toml  setup copy.py  setup.py
2d/cuda_test/: CMakeLists.txt  mainloop.hpp  test.cu
2d/flashattn_2d/: __init__.py  interface.py  reference.py
2d/src/: flash.h  flash_api.cpp  flash_bwd_launch_template.h  flash_fwd_hdim64_bf16_gqa4_sm90.cu  flash_fwd_kernel.h  flash_fwd_launch_template.h  mainloop_fwd_sm90_tma_gmma_ws.hpp  utils.h
2d/test/: test_compare.py  test_hopper.py  test_run.py
hopper/: .cursorignore  flash.h  flash_api.cpp  flash_attn_interface.py  flash_fwd_kernel.h  setup.py
